--- a/src/ESH-Modelo.ApplicationService/ESH-Modelo.ApplicationService.csproj
+++ b/src/ESH-Modelo.ApplicationService/ESH-Modelo.ApplicationService.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Facade.cs" />
+    <Compile Include="Facades\ClienteFacade.cs" />
+    <Compile Include="Facades\IFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\ViewBase.cs" />
   </ItemGroup>
