--- a/src/ESH-Modelo.DataAccess/ESH-Modelo.DataAccess.csproj
+++ b/src/ESH-Modelo.DataAccess/ESH-Modelo.DataAccess.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Repositories\AbstractRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ClienteRepository.cs" />
+    <Compile Include="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ESH-Modelo.DomainModel\ESH-Modelo.DomainModel.csproj">
